--- a/sass/blocks/_offers-delivery.scss
+++ b/sass/blocks/_offers-delivery.scss
@@ -1,40 +1,49 @@
 .offers__delivery {
-	padding: 70px 0;
-	background-image: url(../images/offers-bg.jpg);
-	background-size: cover;
-	background-position: center bottom;
+    padding: 70px 0;
+    background-image: url(../images/offers-bg.jpg);
+    background-size: cover;
+    background-position: center bottom;
 
-	.container {
-		@include center-block (1020px);
-	}
+    .container {
+        @include center-wrap (990px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-	img {
-		width: 100%;
-		background-color: #b8b8b8;
-	}
-	.col-rt {
-		overflow: hidden;
-	}
+    img {
+        width: 100%;
+        background-color: #b8b8b8;
+    }
+}
+
+.offers__content {
+    width: 55%;
+}
+
+.offers__img {
+    overflow: hidden;
+    width: 45%;
 }
 
 .question {
-	font-family: $serif;
-	font-size: 22px;
-	font-weight: 700;
-	font-style: italic;
-	margin-bottom: 40px;
+    font-family: $serif;
+    font-size: 22px;
+    font-weight: 700;
+    font-style: italic;
+    margin-bottom: 40px;
 }
 
 .reply {
-	font-family: $futura-demi;
-	font-size: 64px;
-	font-weight: 400;
-	margin-bottom: 40px;
+    font-family: $futura-demi;
+    font-size: 64px;
+    font-weight: 400;
+    margin-bottom: 40px;
 }
 
 .reply-caption {
-	font-family: $garamond;
-	font-size: 21px;
-	font-weight: 400;
-	line-height: 2.14;
+    font-family: $garamond;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 2.14;
 }
