--- a/sass/components/_fonts.scss
+++ b/sass/components/_fonts.scss
@@ -1,23 +1,25 @@
-@font-face {
-    font-family: 'Myriad Pro';
-    src: url("../fonts/MyriadPro/MyriadProRegular.eot");
-    src: url("../fonts/MyriadPro/MyriadProRegular.eot?#iefix")format("embedded-opentype"),
-    url("../fonts/MyriadPro/MyriadProRegular.woff") format("woff"),
-    url("../fonts/MyriadPro/MyriadProRegular.ttf") format("truetype");
-    font-weight: 400;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Myriad Pro';
+//     src: url("../fonts/MyriadPro/MyriadProRegular.eot");
+//     src: url("../fonts/MyriadPro/MyriadProRegular.eot?#iefix")format("embedded-opentype"),
+//     url("../fonts/MyriadPro/MyriadProRegular.woff") format("woff"),
+//     url("../fonts/MyriadPro/MyriadProRegular.ttf") format("truetype");
+//     font-weight: 400;
+//     font-style: normal;
+// }
 
-@font-face {
-    font-family: 'Futura Futuris C';
-    src: url('../fonts/FuturaFuturis/FuturaFuturisC.eot');
-    src: local('FuturaFuturisC'),
-    url('../fonts/FuturaFuturis/FuturaFuturisC.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/FuturaFuturis/FuturaFuturisC.woff') format('woff'),
-    url('../fonts/FuturaFuturis/FuturaFuturisC.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Futura Futuris C';
+//     src: url('../fonts/FuturaFuturis/FuturaFuturisC.eot');
+//     src: local('FuturaFuturisC'),
+//     url('../fonts/FuturaFuturis/FuturaFuturisC.eot?#iefix') format('embedded-opentype'),
+//     url('../fonts/FuturaFuturis/FuturaFuturisC.woff') format('woff'),
+//     url('../fonts/FuturaFuturis/FuturaFuturisC.ttf') format('truetype');
+//     font-weight: normal;
+//     font-style: normal;
+// }
+
+// logo
 
 @font-face {
     font-family: 'Futura Futuris C';
@@ -30,6 +32,8 @@
     font-style: normal;
 }
 
+// btn
+
 @font-face {
     font-family: 'Futura Medium C';
     src: url('../fonts/Futura/FuturaMediumC.eot');
@@ -40,6 +44,8 @@
     font-weight: 500;
     font-style: normal;
 }
+
+// nav
 
 @font-face {
     font-family: 'Futura Book C';
@@ -52,6 +58,8 @@
     font-style: normal;
 }
 
+//  title
+
 @font-face {
     font-family: 'Futura Demi C';
     src: url('../fonts/Futura/FuturaDemiC.eot');
@@ -63,12 +71,12 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'Moloko';
-    src: url("../fonts/Moloko/Moloko.eot");
-    src: url("../fonts/Moloko/Moloko.eot?#iefix")format("embedded-opentype"),
-    url("../fonts/Moloko/Moloko.woff") format("woff"),
-    url("../fonts/Moloko/Moloko.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Moloko';
+//     src: url("../fonts/Moloko/Moloko.eot");
+//     src: url("../fonts/Moloko/Moloko.eot?#iefix")format("embedded-opentype"),
+//     url("../fonts/Moloko/Moloko.woff") format("woff"),
+//     url("../fonts/Moloko/Moloko.ttf") format("truetype");
+//     font-weight: normal;
+//     font-style: normal;
+// }
