--- a/sass/components/_mixins.scss
+++ b/sass/components/_mixins.scss
@@ -8,25 +8,7 @@
 	align-items: center;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// Волнистый контур для секций
 
 @mixin wave-top ($color-wave: #000) {
 	position: relative;
