--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,8 +2,8 @@
 
 @import "components/fonts";
 @import "components/variables";
-@import "components/breakpoint";
-@import "components/mixins";
+// @import "components/breakpoint";
+// @import "components/mixins";
 @import "components/common";
 @import "components/layout";
 @import "components/buttons";
