--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,21 +4,23 @@
 	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
 	background-color: $dark-gray;
 	font-size: 25px;
+	font-family: $futura-futuris;
+	font-weight: 400;
 
 	@include wave-top ($dark-gray);
 }
 
 .footer__wrap {
 	display: flex;
-	justify-content:space-around;
+	justify-content:space-between;
 	align-items: center;
 	height:170px;
 
-	// @include center-block (1040px);
+	@include center-wrap (990px);
 }
 
 .contact-list {
-	width: 40%;
+	// width: 40%;
 }
 
 .contact-list__item {
@@ -30,7 +32,7 @@
 }
 
 .social-list {
-	width: 20%;
+	min-width: 202px;
 }
 
 .social-list__item {
