--- a/sass/blocks/_advantages.scss
+++ b/sass/blocks/_advantages.scss
@@ -1,24 +1,32 @@
 .advantages {
 	background-color: $white;
 	color: $light-gray;
-	padding: 80px 0 90px;
+	padding: 72px 0 90px;
 	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
 
 	@include wave-top ($white);
 
+	.btn--xl::after {
+		@include psevdo;
+		position: absolute;
+		left: 100%;
+		top: 0;
+		@extend .icon--btn__label;
+	}
 }
 
 .advantages__wrap {
 	display: flex;
-	justify-content: space-around;
-	padding-bottom: 50px;
+	justify-content: space-between;
+	@include center-wrap (990px);
+	padding-bottom: 3rem;
 }
 
 .advantages__item {
 	max-width: 210px;
 	// min-height: 300px;
 	text-align:center;
-	@include center-y;
+	display:flex;
 	justify-content: center;
 	flex-direction: column;
 	align-content:stretch;
@@ -30,12 +38,14 @@
 	h4 {
 		font-family: $futura-demi;
 		font-size: 21px;
-		line-height: 1.5;
+		line-height: 2;
+		margin-top: 18px;
 	}
 
 	p {
 		font-family: $garamond;
 		font-size: 17px;
+		line-height: 1.6;
 		opacity: 0.75;
 	}
 }
