--- a/sass/blocks/_share.scss
+++ b/sass/blocks/_share.scss
@@ -1,36 +1,29 @@
 .share {
-	color: $black;
-	background-image: url(../images/share-bg.jpg);
-	background-size: cover;
-	background-position: center bottom;
-	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
-	padding: 60px 0;
+    color: $black;
+    background-image: url(../images/share-bg.jpg);
+    background-size: cover;
+    background-position: center bottom;
+    box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
+    padding: 70px 0 2rem;
 
-	@include wave-top ($white);
+    @include wave-top ($white);
 
-	.container {
-		@include center-block (1020px);
-	}
+    .container {
+        @include center-wrap (990px);
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: flex-end;
+
+        .question,
+        .reply,
+        .reply-caption {
+            width: 52%;
+            margin-bottom: 2rem;
+        }
+
+        .question,
+        .reply-caption {
+            line-height: 1.5;
+        }
+    }
 }
-
-// .question {
-// 	font-family: $serif;
-// 	font-size: 22px;
-// 	font-weight: 700;
-// 	font-style: italic;
-// 	margin-bottom: 40px;
-// }
-
-// .reply {
-// 	font-family: $futura-demi;
-// 	font-size: 64px;
-// 	font-weight: 400;
-// 	margin-bottom: 40px;
-// }
-
-// .reply-caption {
-// 	font-family: $garamond;
-// 	font-size: 21px;
-// 	font-weight: 400;
-// 	line-height: 2.14;
-// }
