--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -1,37 +1,30 @@
 html {
+	font-family: $futura-futuris;
+	font-size: 18px;
+	font-weight: 400;
 }
 
 body {
 	background-color: $white;
-	// width: $max-width;
+	color: $black;
 	max-width: $max-width;
 	min-width: $min-width;
 	margin: 0 auto;
 }
 
-h1, h2, h3, h4, p {
+h1, h2, h3, h4, p, figure {
 	margin: 0;
 }
 
 a {
     color: inherit;
-    // text-decoration: none;
+    text-decoration: none;
+    font: inherit;
 }
-
-// img {
-// 	width: 100%;
-// }
 
 button, label {
 	border: none;
 	cursor: pointer;
-}
-
-figure {
-	margin: 0;
-}
-
-figcaption {
 }
 
 textarea {
@@ -43,6 +36,67 @@ textarea {
 	font-size: 60px;
 	font-weight: 400;
 	text-align: center;
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 }
 
+// Волнистый контур для секций
+
+@mixin wave-top ($color-wave: #000) {
+	position: relative;
+
+	&::before {
+		content: '';
+		position: absolute;
+		z-index: 10;
+		left: 0;
+		top: -10px;
+		right: 0;
+		background-repeat: repeat;
+		height: 20px;
+		background-size: 40px 20px;
+		background-image: radial-gradient(circle at 11px -6px, transparent 12px, $color-wave 13px);
+	}
+
+	&::after {
+		content: '';
+		position: absolute;
+		z-index: 10;
+		background-repeat: repeat;
+		height: 10px;
+		background-size: 40px 10px;
+		background-image: radial-gradient(circle at 25px 13px, $color-wave 12px, transparent 0px);
+		right: 0;  
+		left: 6px;
+		top: -15px;
+	}
+}
+
+// старая волна
+
+// .wave {
+// 	position: relative;
+
+// 	&::before {
+// 		content: '';
+// 		position: absolute;
+// 		left: 0;
+// 		top: -7px;
+// 		right: 0;
+// 		background-repeat: repeat;
+// 		height: 20px;
+// 		background-size: 40px 20px;
+// 		background-image: radial-gradient(circle at 11px -6px, transparent 12px, $white 13px);   
+// 	}
+
+// 	&::after {
+// 		content: '';
+// 		position: absolute;
+// 		background-repeat: repeat;
+// 		height: 10px;
+// 		background-size: 40px 10px;
+// 		background-image: radial-gradient(circle at 25px 13px, $white 12px, transparent 0px);
+// 		right: 0;  
+// 		left: 6px;
+// 		top: -12px;
+// 	}
+// }
