--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -15,22 +15,21 @@ $btn-color: #35cd12;
 $max-width: 1440px;
 $large-width: 1024px;
 $medium-width: 768px;
-$small-width: 640px;
+// $small-width: 640px;
+$small-width: 480px;
 $min-width: 240px;
 
 
 // Fonts
 
 $futura-demi: 'Futura Demi C', sans-serif;
+
 $futura-medium: 'Futura Medium C', sans-serif;
 $futura-book: 'Futura Book C', sans-serif;
 $futura-futuris: 'Futura Futuris C', sans-serif;
 
 $garamond: 'EB Garamond', serif;
-$sans: 'PT Sans', sans-serif;
+// $sans: 'PT Sans', sans-serif;
 $serif: 'PT Serif', sans-serif;
-$myriad: 'Myriad Pro', sans-serif;
-$Moloko: 'Moloko', sans-serif;
-
-// Futura Futuris C bold
-// AGaramond
+// $myriad: 'Myriad Pro', sans-serif;
+// $Moloko: 'Moloko', sans-serif;
