--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
 	<div class="footer__wrap">
 		<div class="contact-list">
-			<a class="contact-list__item" href="tel: +38099385433">
+			<a class="contact-list__item link" href="tel: +38099385433">
 				(099) 385 4 333
 			</a>
-			<a class="contact-list__item" href="mailto: sales@fredandfresh.com">
+			<a class="contact-list__item link" href="mailto: sales@fredandfresh.com">
 				sales@fredandfresh.com
 			</a>
 		</div>
