--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -29,7 +29,10 @@ $futura-book: 'Futura Book C', sans-serif;
 $futura-futuris: 'Futura Futuris C', sans-serif;
 
 $garamond: 'EB Garamond', serif;
-// $sans: 'PT Sans', sans-serif;
+$sans: 'PT Sans', sans-serif;
 $serif: 'PT Serif', sans-serif;
 // $myriad: 'Myriad Pro', sans-serif;
 // $Moloko: 'Moloko', sans-serif;
+
+
+// Media
