--- a/templates/blocks/menu.html
+++ b/templates/blocks/menu.html
@@ -1,42 +1,37 @@
-<section id= "menu" class="menu">
-	<h2 class="title">FRED меню</h2>
-	<div class="tabs__list">
-
-		<figure class="tabs__item">
-			<button id="soup" class="btn btn--circle">
-				<i class="icon icon--soup"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="soup">Супи</label>
-			</figcaption>
-		</figure>
-
-		<figure class="tabs__item">
-			<button id="sandwich" class="btn btn--circle">
-				<i class="icon icon--sandwich"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="sandwich">Сандвічі</label>
-			</figcaption>
-		</figure>
-
-		<figure class="tabs__item">
-			<button id="salad" class="btn btn--circle">
-				<i class="icon icon--salad"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="salad">Салати</label>
-			</figcaption>
-		</figure>
-
-		<figure class="tabs__item">
-			<button id="dessert" class="btn btn--circle">
-				<i class="icon icon--dessert"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="dessert">Десерти</label>
-			</figcaption>
-		</figure>
-		
-	</div>	
+<section id="menu" class="menu">
+    <h2 class="title">FRED меню</h2>
+    <div class="tabs__list">
+        <figure class="tabs__item">
+            <button id="soup" class="pad">
+                <i class="icon icon--soup"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="soup">Супи</label>
+            </figcaption>
+        </figure>
+        <figure class="tabs__item">
+            <button id="sandwich" class="pad">
+                <i class="icon icon--sandwich"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="sandwich">Сандвічі</label>
+            </figcaption>
+        </figure>
+        <figure class="tabs__item">
+            <button id="salad" class="pad">
+                <i class="icon icon--salad"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="salad">Салати</label>
+            </figcaption>
+        </figure>
+        <figure class="tabs__item">
+            <button id="dessert" class="pad">
+                <i class="icon icon--dessert"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="dessert">Десерти</label>
+            </figcaption>
+        </figure>
+    </div>
 </section>
