--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,44 +1,46 @@
 .footer {
-	position: relative;
-	color: $white;
-	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
-	background-color: $dark-gray;
-	font-size: 25px;
-	font-family: $futura-futuris;
-	font-weight: 400;
-
-	@include wave-top ($dark-gray);
+    @include wave-top ($dark-gray);
+    color: $white;
+    box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
+    background-color: $dark-gray;
+    font-size: 25px;
+    font-family: $futura-futuris;
+    font-weight: 400;
 }
 
 .footer__wrap {
-	display: flex;
-	justify-content:space-between;
-	align-items: center;
-	height:170px;
+    @include center-wrap (990px);
+    padding: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-	@include center-wrap (990px);
-}
+    @media all and (min-width: 768px) {
+        min-height: 130px;
+    }
 
-.contact-list {
-	// width: 40%;
+    @media all and (max-width: 768px - 1) {
+        text-align: center;
+        flex-flow: column nowrap;
+        font-size: 20px;
+        line-height: 2;
+    }
 }
 
 .contact-list__item {
-	margin-right: 42px;
-
-	&:last-child {
-		margin-right: 0;
-	}
+    padding: 0 1rem;
+    line-height: 1.3;
 }
 
 .social-list {
-	min-width: 202px;
+    min-width: 202px;
+    padding: 0 1rem;
 }
 
 .social-list__item {
-	margin-right: 32px;
+    margin-right: 32px;
 
-	&:last-child {
-		margin-right: 0;
-	}
+    &:last-child {
+        margin-right: 0;
+    }
 }
