--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,86 +1,146 @@
 .header {
-	background-image: url('../images/header-bg.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center top;
-	color: $white;
-	height: 1rem*31;
-	position: relative;
-	text-align: center;
+    background-image: url('../images/header-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+    color: $white;
+    height: 31rem;
+    max-height: 100vh;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+
+    @media all and (max-width: 480px) {
+        height: 22rem;
+    }
 }
 
 .header__wrap {
-	font-family: $futura-book;
-	font-weight: 300;
-	font-size: 20px;
-	line-height: 1.5;
-	position: absolute;
-	z-index: 10;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 63px;
-	display: flex;
-	justify-content:space-between;
-	align-items: center;
+    @include center-wrap (990px);
+    font-family: $futura-book;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.5;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 63px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 2;
 
-	@include center-block (1040px);
-
-	padding: 0 1rem*11;
-
-	&::before {
-		content: '';
-		display: block;
-		position: absolute;
-		z-index: -1;
-		top:0;
-		left:0;
-		right:0;
-		height: 100%;
-		background-color: rgba(0, 0, 0, 0.4);
-		box-shadow: 0 -1px 35px rgba(2, 4, 5, 0.75);
-		filter: blur(0px);
-	}
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: -220px;
+        width: $max-width;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+        box-shadow: 0 -1px 35px rgba(2, 4, 5, 0.75);
+        filter: blur(0px);
+    }
 }
 
 .nav {
-	display: flex;
-	justify-content:space-between;
-	min-width: 36*1rem;
+    display: flex;
+    justify-content: space-between;
+    opacity: 1;
 }
 
 .nav__link {
-	padding: 0 1em;
-	// margin-right: 54px;
-	// margin-right: 48px;
-	// &:last-child {
-	// 	margin-right: 0;
-	// }
+    padding: 0 1.35em;
+
+    @media all and (max-width: 1024px - 1){
+    	padding: 0 1em;
+    }
+}
+
+#nav__ch,
+.nav__button {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .nav__button {
+        display: inline-block;
+        float: left;
+        font-size: 32px;
+        line-height: 0.3;
+        font-weight: bold;
+        padding: 2.5px 0;
+        margin: 0 8px;
+    }
+
+    .nav {
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        text-align: left;
+        background-color: rgba(0, 0, 0, 0.4);
+        box-shadow: 0 -1px 35px rgba(2, 4, 5, 0.75);
+
+        filter: blur(0px);
+        z-index: 1;
+        display: block;
+    }
+
+    .nav__link {
+        display: block;
+        padding: 0 3rem;
+    }
+
+    #nav__ch:checked~.nav {
+        visibility: visible;
+        opacity: 1;
+        transition: all 0.4s ease;
+    }
 }
 
 .logo__wrap {
-	position: absolute;
-	top: 54%;
-	left: 0;
-	text-align:center;
-	margin-left: 56%;
+    position: absolute;
+    top: 54%;
+    left: 0;
+    text-align: center;
+    margin-left: 56%;
     transform: translateY(-50%);
+
+    @media all and (max-width: 768px - 1) {
+        right: 0;
+        margin: 0;
+    }
 }
 
 .logo {
-	color: $white;
-	font-family: $futura-futuris;
-	font-size: 96px;
-	font-weight: 700;
-	text-align: left;
-	text-transform: uppercase;
-	margin-bottom:8px;
-	display: inline-block;
+    color: $white;
+    font-family: $futura-futuris;
+    font-size: 96px;
+    font-weight: 700;
+    text-align: left;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    display: inline-block;
+
+    @media all and (max-width: 480px) {
+        font-size: 48px;
+    }
 }
 
 .logo-caption {
-	color: #1cc257;
-	font-size: 39px;
-	font-family: $garamond;
-	font-style: italic;
+    color: #1cc257;
+    font-size: 39px;
+    font-family: $garamond;
+    font-style: italic;
+    
+    @media all and (max-width: 480px) {
+        font-size: 24px;
+    }
 }
