--- a/sass/blocks/_clients.scss
+++ b/sass/blocks/_clients.scss
@@ -1,8 +1,10 @@
 .clients {
     box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
     padding: 70px 0;
-
     @include wave-top ($white);
+    @media all and (max-width: 480px) {
+        padding: 1.5rem 0;
+    }
 }
 
 .clients__wrap {
@@ -10,4 +12,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    @media all and (max-width: 768px - 1) {
+        overflow-x: scroll;
+        display: block;
+    }
 }
