--- a/sass/blocks/_map.scss
+++ b/sass/blocks/_map.scss
@@ -1,39 +1,36 @@
 .map {
-	color: $white;
-	position: relative;
+    color: $white;
+    position: relative;
 
-	.title {
-		position:absolute;
-		top: 75px;
-		left: 0;
-		right:0;
-		z-index: 10;
-		pointer-events: none;
-	}
+    .title {
+        position: absolute;
+        top: 75px;
+        left: 0;
+        right: 0;
+        z-index: 10;
+        pointer-events: none;
+    }
 }
 
 #map {
-	position: relative;
-	width: 100%;
-	height: 670px;
+    position: relative;
+    width: 100%;
+    height: 670px;
 
-	&::before {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		background-color: rgba(0, 0, 0, 0.3);
-		z-index: 1;
-		pointer-events: none;
-	}
+    @media all and (max-width: 768px - 1) {
+        max-height: 80vh;
+    }
 
-	// &:hover {
-
-	// 	&::before {
-	// 		display:none;
-	// 	}
-	// }
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: 1;
+        pointer-events: none;
+    }
 }
