--- a/sass/blocks/_offers.scss
+++ b/sass/blocks/_offers.scss
@@ -1,35 +1,11 @@
 .offers {
-	background-color: $orange;
-	color: $white;
-	padding: 72px 0 90px;
-	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
+    @include wave-top ($orange);
+    background-color: $orange;
+    color: $white;
+    padding: 72px 0 90px;
+    box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
 
-	@include wave-top ($orange);
-
+    @media all and (max-width: 480px) {
+        padding: 1.5rem 0 2rem;
+    }
 }
-
-// используются теги табов
-
-// .offers__wrap {
-// 	text-align: center;
-// 	padding: 0 1rem*13;
-// 	display: flex;
-// 	justify-content: space-between;
-// }
-
-
-
-// .offers__item {
-// 	max-width: 220px;
-// 	text-align:center;
-// 	vertical-align: top;
-// 	display: inline-block;
-// }
-
-// .offers__item__caption {
-// 	font-family: $futura-demi;
-// 	font-size: 25px;
-// 	font-weight: 400;
-// 	display: inline-block;
-// }
-
