--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -15,6 +15,16 @@ select {
     line-height: 1.7;
     padding: 5px 10px;
     border-radius: 3px;
+
+    @media all and (max-width: 1024px - 1) {
+        width: 70%;
+        max-width: 70%;
+    }
+
+    @media all and (max-width: 768px - 1) {
+        width: 100%;
+        max-width: 100%;
+    }
 }
 
 input,
