--- a/templates/blocks/offers.html
+++ b/templates/blocks/offers.html
@@ -1,39 +1,37 @@
 <section id="offers" class="offers">
-	<h3 class="title">FRED пропонує</h3>
-	<div class="tabs__list">
-
-		<figure class="tabs__item">
-			<button id="machine-offers" class="btn btn--circle">
-				<i class="icon icon--machine"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="machine-offers">Вендінгові автомати</label>
-			</figcaption>
-		</figure>
-		<figure class="tabs__item">
-			<button  id="delivery-offers" class="btn btn--circle">
-				<i class="icon icon--corpdelivery"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="delivery-offers">Корпоративна доставка</label>
-			</figcaption>
-		</figure>
-		<figure class="tabs__item">
-			<button id="cafe-offers" class="btn btn--circle">
-				<i class="icon icon--cafe"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="cafe-offers">Кафе здорової їжі</label>
-			</figcaption>
-		</figure>
-		<figure class="tabs__item">
-			<button id="catering-offers" class="btn btn--circle">
-				<i class="icon icon--catering"></i>
-			</button>
-			<figcaption class="tabs__item__title">
-				<label for="catering-offers">Кейтерінг</label>
-			</figcaption>
-		</figure>
-		
-	</div>
+    <h2 class="title">FRED пропонує</h2>
+    <div class="tabs__list">
+        <figure class="tabs__item">
+            <button id="machine-offers" class="pad">
+                <i class="icon icon--machine"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="machine-offers">Вендінгові автомати</label>
+            </figcaption>
+        </figure>
+        <figure class="tabs__item">
+            <button id="delivery-offers" class="pad">
+                <i class="icon icon--corpdelivery"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="delivery-offers">Корпоративна доставка</label>
+            </figcaption>
+        </figure>
+        <figure class="tabs__item">
+            <button id="cafe-offers" class="pad">
+                <i class="icon icon--cafe"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="cafe-offers">Кафе здорової їжі</label>
+            </figcaption>
+        </figure>
+        <figure class="tabs__item">
+            <button id="catering-offers" class="pad">
+                <i class="icon icon--catering"></i>
+            </button>
+            <figcaption class="tabs__item__title">
+                <label for="catering-offers">Кейтерінг</label>
+            </figcaption>
+        </figure>
+    </div>
 </section>
