--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,19 @@
 <header class="header">
-
-	<div class="header__wrap">
-		<nav class="nav">
-			<a href="/" class="nav__link link">Головна</a>
-			<a href="#menu" class="nav__link link">Меню</a>
-			<a href="#" class="nav__link link">Пропонуємо</a>
-			<a href="#" class="nav__link link">Замовити</a>
-			<a href="#" class="nav__link link">Контакти</a>
-		</nav>
-		<button class="btn btn--s">Замовити дегустацію</button>
-		<a href="#" class="link link--login">Увійти</a>
-	</div>
-	
-	<div class="logo__wrap">
-		<h1 class="logo">Fred&<br>Fresh</h1>
-		<p class="logo-caption">Healthy Natural Food</p>
-	</div>
-
+    <div class="header__wrap">
+        <input type="checkbox" id="nav__ch">
+        <label class="nav__button" for="nav__ch">&#9776;</label>
+        <nav class="nav">
+            <a href="#" class="nav__link link">Головна</a>
+            <a href="#menu" class="nav__link link">Меню</a>
+            <a href="#offers" class="nav__link link">Пропонуємо</a>
+            <a href="#advantages" class="nav__link link">Замовити</a>
+            <a href="#map" class="nav__link link">Контакти</a>
+        </nav>
+        <button class="btn btn--s">Замовити дегустацію</button>
+        <!-- <a href="#" class="link link--login">Увійти</a> -->
+    </div>
+    <div class="logo__wrap">
+        <h1 class="logo">Fred&<br>Fresh</h1>
+        <p class="logo-caption">Healthy Natural Food</p>
+    </div>
 </header>
