--- a/templates/blocks/clients.html
+++ b/templates/blocks/clients.html
@@ -1,6 +1,6 @@
 <section class="clients">
 	<h2 class="title">Вже люблять FRED</h2>
-	<div class="clients__wrap">
+	<div class="owl-carousel owl-theme clients__wrap js-slider-clients">
 		<i class="icon icon--datahub"></i>
 		<i class="icon icon--projector"></i>
 		<i class="icon icon--ebsh"></i>
