add svg animation menu burger, fix slider

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 @import "components/common";
 @import "components/layout";
 @import "components/buttons";
+@import "components/burger";
 @import "icon";
 // @import "components/forms";
 
