--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -61,20 +61,13 @@
     }
 }
 
-#nav__ch,
-.nav__button {
+.hamburglar {
     display: none;
 }
 
 @media screen and (max-width: 768px) {
-    .nav__button {
+    .hamburglar {
         display: inline-block;
-        float: left;
-        font-size: 32px;
-        line-height: 0.3;
-        font-weight: bold;
-        padding: 2.5px 0;
-        margin: 0 8px;
     }
 
     .nav {
@@ -98,7 +91,7 @@
         padding: 0 3rem;
     }
 
-    #nav__ch:checked~.nav {
+    .hamburglar.is-open~.nav {
         visibility: visible;
         opacity: 1;
         transition: all 0.4s ease;
