--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,8 @@
 <header class="header">
     <div class="header__wrap">
-        <input type="checkbox" id="nav__ch">
-        <label class="nav__button" for="nav__ch">&#9776;</label>
+        <!-- <input type="checkbox" id="nav__ch"> -->
+        <!-- <label class="nav__button" for="nav__ch">&#9776;</label> -->
+        @@include('blocks/burger.html')
         <nav class="nav">
             <a href="#" class="nav__link link">Головна</a>
             <a href="#menu" class="nav__link link">Меню</a>
